[gd_scene load_steps=10 format=3 uid="uid://burhe2plmswhy"]

[ext_resource type="Script" uid="uid://dsrh4ciu0t0lk" path="res://scene/UI/generic_info_menu_ui.gd" id="1_jnwqr"]
[ext_resource type="Theme" uid="uid://bgi1he5teq16t" path="res://Assets/Low_Poly_Theme.tres" id="2_jnwqr"]
[ext_resource type="FontFile" uid="uid://c0hg4c5mw1sgw" path="res://Assets/Fonts/Nano/nano-sharp.ttf" id="3_rvkwo"]
[ext_resource type="Texture2D" uid="uid://db3awthn06iw4" path="res://Assets/icons/whiteHouseIcon.svg" id="4_igdmh"]
[ext_resource type="Texture2D" uid="uid://b44gqt0ngg124" path="res://Assets/icons/whiteRightArrowIcon.svg" id="5_jnwqr"]
[ext_resource type="Texture2D" uid="uid://sixg0ixa3ky1" path="res://Assets/icons/whiteLeftArrowIcon.svg" id="5_rvkwo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hc2bn"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_igdmh"]
texture = ExtResource("5_rvkwo")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hc2bn"]
texture = ExtResource("5_jnwqr")

[node name="generic_info_menu_ui" type="CanvasLayer"]
script = ExtResource("1_jnwqr")
metadata/_edit_horizontal_guides_ = [651.0]

[node name="Title" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.067
anchor_top = 0.18100001
anchor_right = 0.067
anchor_bottom = 0.18100001
offset_left = -53.184006
offset_top = -101.28801
offset_right = 439.31598
offset_bottom = 24.71199
grow_horizontal = 2
theme = ExtResource("2_jnwqr")
theme_override_fonts/font = ExtResource("3_rvkwo")
theme_override_font_sizes/font_size = 50
text = "Title"

[node name="PageCounter" type="Label" parent="."]
anchors_preset = -1
anchor_right = 0.19500001
anchor_bottom = 0.273
offset_left = 1044.0
offset_top = 48.0
offset_right = 869.36
offset_bottom = -93.90401
theme = ExtResource("2_jnwqr")
theme_override_font_sizes/font_size = 20
text = "1/X"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -325.0
offset_top = -152.0
offset_right = 399.0
offset_bottom = 236.0
grow_horizontal = 2
grow_vertical = 2
text = " Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur venenatis porta massa id pharetra. Aenean nunc odio, semper eget nulla eget, aliquet placerat ipsum. Etiam quis consequat nulla. Donec viverra condimentum metus, sed bibendum massa fringilla quis. Donec scelerisque aliquet consequat. Sed hendrerit enim ac velit lobortis, sit amet efficitur eros elementum. Duis dignissim purus enim, at pretium metus gravida ac.

Donec ut dignissim dui. Mauris diam justo, porttitor sit amet leo at, laoreet dapibus dolor. Sed libero quam, tincidunt quis odio elementum, varius tincidunt libero. Aliquam rutrum sollicitudin nisl. Curabitur sed nunc egestas, molestie orci vel, elementum tellus. Proin tempus, ante vitae porttitor posuere, nisi elit eleifend eros, quis pellentesque dolor metus eu dolor. Etiam sem velit, porta eget lobortis vel, interdum quis libero. Fusce in dolor ullamcorper, congue purus vitae, commodo lacus. Quisque quis eros lectus. Maecenas sed pulvinar ipsum, quis cursus leo. Suspendisse vehicula tellus laoreet, egestas quam in, tempor nibh. "

[node name="HomeButton" type="Button" parent="."]
offset_left = 248.00002
offset_top = 511.99997
offset_right = 888.0
offset_bottom = 1152.0
scale = Vector2(0.094326325, 0.10154381)
theme_override_colors/font_color = Color(0.875, 0.875, 0.875, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_icons/icon = ExtResource("4_igdmh")
theme_override_styles/normal = SubResource("StyleBoxFlat_hc2bn")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = 864.0
offset_top = 506.0
offset_right = 2148.0
offset_bottom = 1146.0
scale = Vector2(0.06544848, 0.111878105)

[node name="leftArrowButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_igdmh")
icon = ExtResource("5_rvkwo")

[node name="rightArrowButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_hc2bn")
icon = ExtResource("5_jnwqr")

[connection signal="pressed" from="HomeButton" to="." method="_on_home_button_pressed"]
[connection signal="pressed" from="HBoxContainer/leftArrowButton" to="." method="_on_left_arrow_button_pressed"]
